# hatchet-rag-demo

./: .env-example  .gitignore  README.md  pyproject.toml
backend/src/api/: main.py  models.py
backend/src/workflows/: basicrag.py  hatchet.py  main.py
frontend/src/: App.css
