[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Rui Ramos",email = "rui.ms.ramos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
fastapi = "^0.115.12"
openai = "^1.1.0"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
urllib3 = "2.3.0"
hatchet-sdk = "0.47.1"
grpcio-tools = "1.71.0"

[tool.poetry.scripts]
api = "backend.src.api.main:start"
hatchet = "backend.src.workflows.main:start"
